# diva_pico

./: .gitignore  README.md  README_CN.md
PCB/main/: diva_main.kicad_pcb  diva_main.kicad_prl  diva_main.kicad_pro  diva_main.kicad_sch  diva_main.kicad_sym  fp-info-cache  fp-lib-table
PCB/pico/: diva_main.kicad_pcb  diva_main.kicad_sch  diva_main.kicad_sym  fp-info-cache  sym-lib-table
PCB/plus/: Diva Pico+ - PCB EdgeCut.dxf  diva_plus.bak  diva_plus.kicad_pcb  diva_plus.kicad_prl  diva_plus.kicad_pro  diva_plus.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
Production/CAD/: Button+_Choc_V1_Combo.3mf  Button+_Choc_V2_Combo.3mf  Button+_Combo.3mf  Diva Pico+ - Panel Combo.3mf  Diva Pico+ - Support.stl  diva_pico_base.stl  diva_pico_base.stl.stl  diva_pico_button_combo.3mf  diva_pico_buttons_fixed_42.3mf  diva_pico_buttons_fixed_48.3mf  diva_pico_buttons_rotate_42.3mf  diva_pico_buttons_rotate_48.3mf  diva_pico_cover_42.3mf  diva_pico_cover_42.3mf.stl  diva_pico_cover_48.3mf  diva_pico_cover_48.3mf.stl  diva_pico_cover_base.stl.stl  diva_pico_panel.3mf  (+1 more)
firmware/: CMakeLists.txt  diva_pico.uf2
firmware/src/: CMakeLists.txt  aime.c  board_defs.h  button.c  button.h  cli.c  cli.h  commands.c  commands.h  config.c  config.h  gesture.c  gesture.h  hebtn.c  hebtn.h  hid.c  hid.h  main.c  mbedtls_config.h  mpr121.c  mpr121.h  ps4_feat.c  ps4_feat.h  ps4key.c  ps4key.h  rgb.c  rgb.h  savedata.c  savedata.h  slide.c  slide.h  slider.c  slider.h  tusb_config.h  usb_descriptors.c  usb_descriptors.h
tools/: TLAC.dva  ps4key_packer.html  ps4test.uf2
(+20 files in other folders)
